[package]
name = "cpd-finder"
version = "0.1.4"
edition.workspace = true
publish = false
rust-version.workspace = true
description = "File walking and clone detection for cpd"
license.workspace = true

[dependencies]
cpd-core = { version = "0.1.3", path = "../cpd-core" }
cpd-tokenizer = { version = "0.1.3", path = "../cpd-tokenizer" }
ignore = "0.4"
globset = "0.4"
rayon = "1"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
thiserror = "2"
log = "0.4"
chrono = "0.4"