[package]
name = "cpd-finder"
version = "0.1.8"
edition.workspace = true
publish = false
rust-version.workspace = true
description = "File walking and clone detection for cpd"
homepage.workspace = true
license.workspace = true

[dependencies]
cpd-core = { version = "0.1.6", path = "../cpd-core" }
cpd-tokenizer = { version = "0.1.7", path = "../cpd-tokenizer" }
ignore = "0.4"
globset = "0.4"
rayon = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
thiserror = "2"
log = "0.4"
chrono = "0.4"
memmap2 = "0.9"
memchr = "2.8"
