[package]
name = "cpd-reporter"
version = "0.1.7"
edition.workspace = true
publish = false
rust-version.workspace = true
description = "Output format reporters for cpd"
homepage.workspace = true
license.workspace = true

[dependencies]
cpd-core = { version = "0.1.6", path = "../cpd-core" }
cpd-finder = { version = "0.1.7", path = "../cpd-finder" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.41", features = ["serialize"] }
csv = "1"
askama = "0.12"
thiserror = "2"
