[package]
name = "cpd-tokenizer"
version = "0.1.4"
edition.workspace = true
publish = false
rust-version.workspace = true
description = "Source code tokenizers for cpd"
license.workspace = true

[dependencies]
cpd-core = { version = "0.1.3", path = "../cpd-core" }
oxc_parser = "0.133"
oxc_allocator = "0.133"
oxc_span = "0.133"
log = "0.4"
regex = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
serde_json = "1"
