[package]
name = "jscpd"
version = "5.0.0-alpha"
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "jscpd"
path = "src/lib.rs"

[[bin]]
name = "cpd"
path = "src/main.rs"

[dependencies]
cpd-core = { version = "0.1.0", path = "../cpd-core" }
cpd-tokenizer = { version = "0.1.0", path = "../cpd-tokenizer" }
cpd-finder = { version = "0.1.0", path = "../cpd-finder" }
cpd-reporter = { version = "0.1.0", path = "../cpd-reporter" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
