[package]
name = "jscpd"
version = "5.0.11"
edition.workspace = true
publish = false
rust-version.workspace = true
description = "Copy/paste detector — fast Rust-based CLI for code duplication detection"
homepage.workspace = true
license.workspace = true

[lib]
name = "jscpd"
path = "src/lib.rs"

[[bin]]
name = "cpd"
path = "src/main.rs"

[[bin]]
name = "jscpd"
path = "src/main.rs"

[dependencies]
cpd-core = { version = "0.1.6", path = "../cpd-core" }
cpd-tokenizer = { version = "0.1.7", path = "../cpd-tokenizer" }
cpd-finder = { version = "0.1.8", path = "../cpd-finder" }
cpd-reporter = { version = "0.1.7", path = "../cpd-reporter" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
